components/3.22.x/others/yaml-dsl.md
# YAML DSL

**Since Camel 3.9**

The YAML DSL provides the capability to define your Camel routes, route templates & REST DSL configuration in YAML.

## Defining a route

A route is collection of elements defined as follows:

```yaml
- from: (1)
    uri: "direct:start"
    steps: (2)
      - filter:
          expression:
            simple: "${in.header.continue} == true"
          steps: (2)
            - to:
                uri: "log:filtered"
      - to:
          uri: "log:original"
```

<table><tbody><tr><td><i class="conum" data-value="1"></i><b>1</b></td><td>route entry point, by default <code>from</code> and <code>rest</code> are supported</td></tr><tr><td><i class="conum" data-value="2"></i><b>2</b></td><td>processing steps</td></tr></tbody></table>

> **Note**
> Each step is represented by a YAML map that has a single entry where the field name is the EIP name

As a general rule, each step provides all the parameters the related definition declares, but there are some minor differences/enhancements:

-   **Output Aware Steps**
    
    Some steps such as `filter` and `split` have their own pipeline. When an exchange matches the filter expression or for the items generated by the split expression, such a pipeline can be defined by the `steps` field:
    
    ```yaml
    filter:
      expression:
        simple: "${in.header.continue} == true"
        steps:
          - to:
              uri: "log:filtered"
    ```
    
-   **Expression Aware Steps**
    
    Some EIPs such as `filter` and `split` support the definition of an expression through the `expression` field:
    
    Explicit Expression field
    
    ```yaml
    filter:
      expression:
        simple: "${in.header.continue} == true"
    ```
    
    To make the DSL less verbose, the `expression` field can be omitted:
    
    Implicit Expression field
    
    ```yaml
    filter:
      simple: "${in.header.continue} == true"
    ```
    
    In general, `expression` can be defined inline like in the examples above. But in case you need to provide more information, you can 'unroll' the expression definition and configure any single parameter the expression defines.
    
    Full Expression definition
    
    ```yaml
    filter:
      tokenize:
        token: "<"
        end-token: ">"
    ```
    
-   **Data Format Aware Steps**
    
    The EIP `marshal` and `unmarshal` supports the definition of data formats:
    
    ```yaml
    marshal:
      json:
        library: Gson
    ```
    
    > **Note**
    > In case you want to use the data-format’s default settings, you need to place an empty block as data format parameters, like `json: {}`
    

## Defining endpoints

To define an endpoint with the YAML dsl you have two options:

1.  Using a classic Camel URI:
    
    ```yaml
    - from:
        uri: "timer:tick?period=1s"
        steps:
          - to:
              uri: "telegram:bots?authorizationToken=XXX"
    ```
    
2.  Using URI and parameters:
    
    ```yaml
    - from:
        uri: "timer://tick"
        parameters:
          period: "1s"
        steps:
          - to:
              uri: "telegram:bots"
              parameters:
                authorizationToken: "XXX"
    ```
    

## Defining beans

In addition to the general support for creating beans provided by [Camel Main](main.html#_specifying_custom_beans), the YAML DSL provides a convenient syntax to define and configure them:

```yaml
- beans:
  - name: beanFromMap  (1)
    type: com.acme.MyBean (2)
    properties: (3)
      foo: bar
```

<table><tbody><tr><td><i class="conum" data-value="1"></i><b>1</b></td><td>the name of the bean which will be used to bound the instance to the Camel Registry</td></tr><tr><td><i class="conum" data-value="2"></i><b>2</b></td><td>the full qualified class name of the bean</td></tr><tr><td><i class="conum" data-value="3"></i><b>3</b></td><td>the properties of the bean to be set</td></tr></tbody></table>

The properties of the bean can be defined using either a map or properties style, as shown in the example below:

```yaml
- beans:
  # map style
  - name: beanFromMap
    type: com.acme.MyBean
    properties:
      field1: 'f1'
      field2: 'f2'
      nested:
        field1: 'nf1'
        field2: 'nf2'
  # properties style
  - name: beanFromProps
    type: com.acme.MyBean
    properties:
      field1: 'f1_p'
      field2: 'f2_p'
      nested.field1: 'nf1_p'
      nested.field2: 'nf2_p'
```

> **Note**
> The `beans` elements can only be used as the root element

## Configuring options on languages

Some [Languages](../../4.18.x/languages/index.md) have additional configurations you may need to use.

For example, the [JSONPath](../../4.18.x/languages/jsonpath-language.md) can be configured to ignore JSon parsing errors. This is intended when you use a [Content Based Router](../../4.18.x/eips/choice-eip.md) and want to route the message to different endpoints. But the JSon payload of the message can be in different forms; meaning that the JSonPath expressions in some cases would fail with an exception, and other times not. In this situation, you need to set `suppress-exception` to true, as shown below:

```yaml
- from:
    uri: "direct:start"
    steps:
      - choice:
          when:
          - jsonpath:
              expression: "person.middlename"
              suppress-exceptions: true
            steps:
            - to: "mock:middle"
          - jsonpath:
              expression: "person.lastname"
              suppress-exceptions: true
            steps:
            - to: "mock:last"
          otherwise:
            steps:
              - to: "mock:other"
```

In the route above, the following message

```json
{
  "person": {
    "firstname": "John",
    "lastname": "Doe"
  }
}
```

Would have failed the JSonPath expression `person.middlename` because the JSon payload does not have a `middlename` field. To remedy this we have suppressed the exception.

## External examples

You can find a set of examples using `main-yaml` in [Camel Examples](https://github.com/apache/camel-examples) which demonstrate creating Camel Routes with YAML.

Another way to find examples of YAML DSL is to look in [Camel Kamelets](https://github.com/apache/camel-kamelets) where each Kamelet is defined using YAML.

## Supported EIPs

The following set of high level EIPs are supported in the yaml DSL language. For full details on their expected configuration, please refer to the [Camel YAML DSL specification](https://github.com/apache/camel/blob/main/dsl/camel-yaml-dsl/camel-yaml-dsl/src/generated/resources/schema/camel-yaml-dsl.json).

-   Aggregate
    
-   Bean
    
-   Do Catch
    
-   Do Try
    
-   Do Finally
    
-   Choice
    
-   Circuit Breaker
    
-   Claim Check
    
-   Convert Body To
    
-   Delay
    
-   Dynamic Router
    
-   Enrich
    
-   Error Handler
    
-   Filter
    
-   From
    
-   Idempotent Consumer
    
-   Intercept
    
-   Intercept From
    
-   Intercept Send To Endpoint
    
-   Load Balance
    
-   Log
    
-   Loop
    
-   Marshal
    
-   Multicast
    
-   On Completion
    
-   On Exception
    
-   On Fallback
    
-   Otherwise
    
-   Pausable
    
-   Pipeline
    
-   Policy
    
-   Poll Enrich
    
-   Process
    
-   Recipient List
    
-   Remove Header
    
-   Remove Headers
    
-   Remove Property
    
-   Remove Properties
    
-   Resequence
    
-   Resumable
    
-   REST DSL
    
-   Rollback
    
-   Routing Slip
    
-   Saga
    
-   Sample
    
-   Script
    
-   Service Call
    
-   Set Body
    
-   Set Exchange Pattern
    
-   Set Header
    
-   Set Property
    
-   Sort
    
-   Split
    
-   Step
    
-   Stop
    
-   Threads
    
-   Throttle
    
-   Throw Exception
    
-   To
    
-   To Dynamic
    
-   Transacted
    
-   Transform
    
-   Unmarshal
    
-   Validate
    
-   When
    
-   When Skip Send To Endpoint
    
-   Wire Tap
    

> **Note**
> The Try / Catch / Finally EIP currently only supports specifying one `do-catch` clause.